--- a/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks.nuspec
+++ b/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks.nuspec
@@ -23,7 +23,7 @@ using this tokenized nuspec file.
     <description>Testing implementation for RedRocket.Persistence which helps build quick mocks for testing.</description>
     <projectUrl>https://github.com/TylerGarlick/RedRocket.Persistence.Mocks</projectUrl>
     <dependencies>
-      <dependency id="RedRocket.Persistence.Common" version="1.0.0.0" />
+      <dependency id="RedRocket.Persistence.Common" />
     </dependencies>
   </metadata>
   <files>
