fixed nuspec file

--- a/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks.nuspec
+++ b/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks.nuspec
@@ -25,7 +25,7 @@ using this tokenized nuspec file.
     <dependencies>
       <dependency id="RedRocket.Persistence.Common" />
     </dependencies>
-    <tags>RedRocket, Persistence, FlitBit</tags>
+    <tags>RedRocket Framework, RedRocket, Entity Framework, Generic Repository, Persistence, FlitBit</tags>
   </metadata>
   <files>
     <file src="bin\Release\RedRocket.Persistence.Mocks.dll" target="lib\net45" />
