--- a/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks.csproj
+++ b/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks/RedRocket.Persistence.Mocks.csproj
@@ -37,11 +37,13 @@
     <Reference Include="JetBrains.Annotations">
       <HintPath>..\packages\JetBrains.Annotations.7.0\lib\net45\JetBrains.Annotations.dll</HintPath>
     </Reference>
-    <Reference Include="RedRocket.Persistence.Common">
-      <HintPath>..\packages\RedRocket.Persistence.Common.1.0.1.15\lib\net45\RedRocket.Persistence.Common.dll</HintPath>
+    <Reference Include="RedRocket.Persistence.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RedRocket.Persistence.Common.1.0.1.17\lib\net45\RedRocket.Persistence.Common.dll</HintPath>
     </Reference>
-    <Reference Include="RedRocket.Utilities.Core">
-      <HintPath>..\packages\RedRocket.Utilities.Core.1.0.0.34\lib\net45\RedRocket.Utilities.Core.dll</HintPath>
+    <Reference Include="RedRocket.Utilities.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\RedRocket.Utilities.Core.1.0.0.35\lib\net45\RedRocket.Utilities.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
